--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,37 @@
 h1 {
   text-align: center;
   color: rgb(94, 138, 219);
+}
+
+nav {
+  background-color: rgb(94, 138, 219);
+  padding: 10px;
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  margin-right: 25px;
+}
+nav a {
+  color: white;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+nav a:hover {
+  color: pink;
+  text-decoration: none;
+}
+
+body {
+  background-color: lightblue;
+  text-align: center;
+}
+
+main {
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: white;
 }/*# sourceMappingURL=style.css.map */
