--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -13,6 +13,10 @@ h1 {
     color: $light-blue;
 }
 
+h2 {
+    color: $light-light-blue
+}
+
 nav {
     background-color: $light-blue;
     padding: 10px;
