--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,15 @@ body {
   text-align: center;
 }
 
+img {
+  width: 300px;
+  height: 300px;
+}
+img#detailed-pic {
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
+
 main {
   margin-right: 20px;
   margin-left: 20px;
