--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -48,6 +48,17 @@ body {
     text-align: center;
 }
 
+img {
+    width: 300px;
+    height: 300px;
+
+    &#detailed-pic {
+        padding-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+
 main {
     margin-right: 20px;
     margin-left: 20px;
